Main Menu
Created a scene for main menu